<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="textToType">"Type here"</string>
    <string name="enterEmail">"Enter your email address:"</string>
    <string name="emailInputHint">"Type email here"</string>
    <string name="emailInputHint1">"Enter your email"</string>
    <string name="password">"Type your password:"</string>
    <string name="buttonLogin">"LOGIN"</string>
    <string name="profile">"Your profile"</string>
    <string name="name">"Your name:"</string>
    <string name="email">"Your email:"</string>
    <string name="picture">"Your picture"</string>
    <string name="clickPicture">"Click the button above to take your picture"</string>
    <string name="nameInputHint">"Enter your name"</string>
    <string name="goToChat">"Go to Chat"</string>
    <string name="send">"SEND"</string>
    <string name="receive">"RECEIVE"</string>
    <string name="placeholder">"Type here"</string>
    <string name="weather">Weather Forecast</string>
    <string name="weatherB">Weather Forecast</string>
    <string name="currentTemp">Current Temperature: </string>
    <string name="minTemp">Min. Temperature: </string>
    <string name="maxTemp">Max. Temperature: </string>
    <string name="uvRate">UV rate</string>
    <string name="toolbar">Go to toolbar page</string>




</resources>
