<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewWeather"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/weather_icon"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/weatherB" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentTemp"
        android:layout_toEndOf="@id/imageViewWeather"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/minTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTemperature"
        android:text="@string/minTemp"
        android:layout_toEndOf="@id/imageViewWeather"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/maxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minTemperature"
        android:layout_toEndOf="@id/imageViewWeather"
        android:layout_marginTop="10dp"
        android:text="@string/maxTemp" />

    <TextView
        android:id="@+id/uvRating"
        android:layout_below="@id/maxTemperature"
        android:layout_toEndOf="@id/imageViewWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uvRate"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/progress"
        android:layout_below="@id/imageViewWeather"/>
</RelativeLayout>

